# conan_qt_example

./: CMakeLists.txt  README.md  conanfile.txt  main.cpp  widget.cpp  widget.h  widget.ui
